--- a/AI/src/demo.ipynb
+++ b/AI/src/demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
        "(48, 48, 3)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,62 +44,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[ 50  50  50]\n",
-      "  [ 32  32  32]\n",
-      "  [ 15  15  15]\n",
+      "[[[136 136 136]\n",
+      "  [168 168 168]\n",
+      "  [222 222 222]\n",
       "  ...\n",
-      "  [133 133 133]\n",
-      "  [151 151 151]\n",
-      "  [ 86  86  86]]\n",
+      "  [212 212 212]\n",
+      "  [194 194 194]\n",
+      "  [191 191 191]]\n",
       "\n",
-      " [[ 57  57  57]\n",
-      "  [ 34  34  34]\n",
-      "  [ 22  22  22]\n",
+      " [[135 135 135]\n",
+      "  [185 185 185]\n",
+      "  [224 224 224]\n",
       "  ...\n",
-      "  [138 138 138]\n",
-      "  [151 151 151]\n",
-      "  [ 89  89  89]]\n",
+      "  [225 225 225]\n",
+      "  [193 193 193]\n",
+      "  [193 193 193]]\n",
       "\n",
-      " [[ 61  61  61]\n",
-      "  [ 30  30  30]\n",
-      "  [ 24  24  24]\n",
+      " [[144 144 144]\n",
+      "  [206 206 206]\n",
+      "  [224 224 224]\n",
       "  ...\n",
-      "  [142 142 142]\n",
-      "  [149 149 149]\n",
-      "  [ 89  89  89]]\n",
+      "  [236 236 236]\n",
+      "  [197 197 197]\n",
+      "  [192 192 192]]\n",
       "\n",
       " ...\n",
       "\n",
-      " [[103 103 103]\n",
-      "  [100 100 100]\n",
-      "  [100 100 100]\n",
+      " [[165 165 165]\n",
+      "  [173 173 173]\n",
+      "  [193 193 193]\n",
       "  ...\n",
-      "  [149 149 149]\n",
-      "  [104 104 104]\n",
-      "  [ 85  85  85]]\n",
+      "  [174 174 174]\n",
+      "  [168 168 168]\n",
+      "  [193 193 193]]\n",
       "\n",
-      " [[107 107 107]\n",
-      "  [111 111 111]\n",
-      "  [113 113 113]\n",
+      " [[192 192 192]\n",
+      "  [141 141 141]\n",
+      "  [150 150 150]\n",
       "  ...\n",
-      "  [151 151 151]\n",
-      "  [120 120 120]\n",
-      "  [ 86  86  86]]\n",
+      "  [160 160 160]\n",
+      "  [175 175 175]\n",
+      "  [187 187 187]]\n",
       "\n",
-      " [[104 104 104]\n",
-      "  [104 104 104]\n",
-      "  [112 112 112]\n",
+      " [[204 204 204]\n",
+      "  [207 207 207]\n",
+      "  [133 133 133]\n",
       "  ...\n",
-      "  [143 143 143]\n",
-      "  [136 136 136]\n",
-      "  [ 83  83  83]]]\n"
+      "  [154 154 154]\n",
+      "  [180 180 180]\n",
+      "  [176 176 176]]]\n"
      ]
     }
    ],
@@ -109,16 +109,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x22c6e453e90>"
+       "<matplotlib.image.AxesImage at 0x2556689fe60>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
        "(224, 224, 3)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,9 +234,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "training_Data = []\n",
     "\n",
@@ -256,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +318,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def normalize_data(X, batch_size=1000):\n",
+    "    num_samples = X.shape[0]\n",
+    "    num_batches = num_samples // batch_size\n",
+    "    remainder = num_samples % batch_size\n",
+    "    \n",
+    "    if remainder > 0:\n",
+    "        num_batches += 1\n",
+    "    \n",
+    "    for i in range(num_batches):\n",
+    "        start_idx = i * batch_size\n",
+    "        end_idx = min((i + 1) * batch_size, num_samples)\n",
+    "        X_batch = X[start_idx:end_idx]\n",
+    "        X[start_idx:end_idx] = X_batch / 255.0\n",
+    "    \n",
+    "    return X\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = normalize_data(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +359,7 @@
        "(28709, 224, 224, 3)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -337,27 +380,27 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mMemoryError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[31], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m x \u001b[38;5;241m=\u001b[39m \u001b[43mx\u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[38;5;241;43m255.0\u001b[39;49m \u001b[38;5;66;03m#normalizing the data\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[88], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m x \u001b[38;5;241m=\u001b[39m \u001b[43mx\u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[38;5;241;43m255.0\u001b[39;49m \u001b[38;5;66;03m#normalizing the data\u001b[39;00m\n",
       "\u001b[1;31mMemoryError\u001b[0m: Unable to allocate 32.2 GiB for an array with shape (28709, 224, 224, 3) and data type float64"
      ]
     }
    ],
    "source": [
-    "#x = x/255.0 #normalizing the data"
+    "# x = x/255.0 #normalizing the data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4"
+       "6"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,36 +418,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "from tensorflow import keras\n",
+    "# from tensorflow.python import keras\n",
     "from tensorflow.keras import layers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading data from https://storage.googleapis.com/tensorflow/keras-applications/mobilenet_v2/mobilenet_v2_weights_tf_dim_ordering_tf_kernels_1.0_224.h5\n",
-      "\u001b[1m14536120/14536120\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 0us/step\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "model = tf.keras.applications.MobileNetV2"
+    "from tensorflow.keras.applications import MobileNetV2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model = tf.keras.applications.MobileNetV2\n",
+    "model = MobileNetV2()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1413,6 +1458,180 @@
    ],
    "source": [
     "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Transfer Learning - Tuning, weights will start from lat check point"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_input = model.layers[1].input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<KerasTensor shape=(None, 224, 224, 3), dtype=float32, sparse=None, name=keras_tensor>"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "base_input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_output = model.layers[-2].output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<KerasTensor shape=(None, 1280), dtype=float32, sparse=False, name=keras_tensor_154>"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "base_output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_output = layers.Dense(128)(base_output)\n",
+    "final_ouput = layers.Activation('relu')(final_output)\n",
+    "final_output = layers.Dense(64)(final_ouput)\n",
+    "final_ouput = layers.Activation('relu')(final_output)\n",
+    "final_output = layers.Dense(7, activation='softmax')(final_ouput)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<KerasTensor shape=(None, 7), dtype=float32, sparse=False, name=keras_tensor_175>"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_model = keras.Model(inputs = base_input, outputs = final_output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'new_model' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mnew_model\u001b[49m\u001b[38;5;241m.\u001b[39msummary()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'new_model' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "new_model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_model.compile(loss=\"sparse_categorical_crossentropy\", optimizer=\"adam\", metrics=[\"accuracy\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = np.array(y)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/25\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "new_model.fit(x,y, epochs= 25)"
    ]
   }
  ],
